    {#} Fix bugs which caused some mp3 genres not to be recognized and setting mp3genres be ignored (#322)
    {^} Option to reduce weight of speedstats when calculating destination ranks during a race (setting reduced_speedstat_weight in slftp.ini)
    {^} Improve caching of skiplist values for dirlist

--=============================( SLFTP v1.5.9 )===================================-
    {+} Support 'site search' cmd to find requests, use setting use_site_search_on_reqfill in ini or !usesitesearchonreqfill per site
    {#} sort destinations on KB level to make sure the highest ranked sites get race tasks created first before the queue sort
    {#} Fixed an issue which could cause autodirlists to stop working on very busy sites when queue clean is enabled
    {#} Rules for all sites (*) were not being persisted if split_site_data was enabled. Those are now saved into {admin_sitename}.rtpl
    {^} Allow to disable creating the 'already on site' dir when req filling by setting create_already_on_site_in_directory=0 (#302)
    {^} Allow to disable the file compare to determine a complete request by setting compare_files_for_reqfilled_fallback=0
    {^} Allow to fill requests that are on the site already by setting fill_already_on_site=1
    {^} Reset auto disabled NFO download for sites to enabled on 'SITE UP'
    {^} Adjust IMDB parsing for new IMDB page layout (#311)

--=============================( SLFTP v1.5.8 )===================================-
    {+} Reverse FXP can be enabled by command !reversefxp (#9)
    {+} cryptconf functionality integrated into slftp as command line utility, see 'slftp(.exe) --help' (#298)
    {+} Pure-FTPd support (#303)
    {+} Added OpenSSL 1.1.1 support (OpenSSL 1.0.2 no longer supported) (#90)
    {#} Fix 'No such directory' error flood if a subdir was deleted during a race (#200)
    {#} Fix not working pretime check retry (settings readd_attempts, readd_interval of [taskpretime])