@@ -401,11 +401,16 @@ readd_attempts=5
 readd_interval=3
 # define a global max pretime for all sites and sections
 default_pretime=600
-# URL to your php script that supplies pre information like this:
-# RELEASENAME UNIXTIMESTAMP FILES SIZE
+# URL to your php script that supplies the pretime, what sl parses is configurable by you below.
 # For unknown pretime deliver a blank page
 # %s is the token where the releasename gets inserted
-url=http://127.0.0.1/pretime.php?text=%s
+#url=http://127.0.0.1/pretime.php?text=%s
+# Versions previous to slFtp 1.5.10 expected: RELEASENAME UNIXTIMESTAMP FILES SIZE SECTION which the default regex matches.
+# However this is configurable, define the regex to match the response. (?<pretime>\d+) defines a named capture group looking for one or more digits.
+# If you edit, verify on regex101[dot]com that it says: Named Capture Group pretime (?<pretime>\d+) and holds the pretime value.
+# pretime is the only required named capture group, so if the other end only responds with a pretime:
+# regexp=^(?<pretime>\d+)  and if it returns rlsname and pretime you would do something like:  regexp=^(\S+) (?<pretime>\d+)
+#regexp=
 
 [dirlist]
 # files which shouldn't be added to dirlist; those files never will be traded because they are unknown for slftp
